--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -1,5 +1,3 @@
-
-
 /* #Stylos Basicos 
 ================================================== */
 body {
@@ -73,6 +71,7 @@ p a, p a:visited { line-height: 25px;; }
 /* #Images
 ================================================== */
 img.scale-with-grid {  max-width: 100%;  height: auto; }
+image {  max-width: 100%;  height: auto; }
 .frame-scale-with-grid {  max-width: 100%; }
 #google_map iframe {  width: 100%;  height: 416px;  border: 0; }	
 
@@ -139,7 +138,7 @@ img.scale-with-grid {  max-width: 100%;  height: auto; }
     float: left;
     height: 30px;
     z-index: 1015;
-    padding: 0px 1px 0px 1px;
+    padding: 0px 1px 2px 1px;
     background:#00AF50 url('../img/main_nav_bgr_sep.png') right top no-repeat;	
 }
 #menu > ul > li:hover {
@@ -149,7 +148,7 @@ img.scale-with-grid {  max-width: 100%;  height: auto; }
     line-height: 20px;
     text-decoration: none;
     display: block;
-    padding:5px 17px 0px 15px;
+    padding:1px 15px 0px 5px;
     z-index: 6;
     font-size: 15px;
     font-weight: bold;
@@ -264,7 +263,7 @@ img.scale-with-grid {  max-width: 100%;  height: auto; }
     color: #222;
     background-color: #00AF50;
     top: 100px;
-    height: 34px;
+    height: 25px;
     font-family: Calibri, sans-serif;
     font-size: 13px;	
     padding: 0px;
@@ -2004,6 +2003,7 @@ li.comment ol.comment_sub {
 /* Table */
 .aqua_table {
     margin: 20px 0;
+    width: 100%;
 }
 .aqua_table th {
     border: 1px solid #e2e2e2;
@@ -2085,9 +2085,10 @@ li.comment ol.comment_sub {
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: 180px;
+    top: 250px;
     height: 41px;
     width: 41px;
+    margin-top:205px;
     z-index: 20;
     background: transparent;
     background: rgba(85, 97, 103, 0.7);
@@ -2445,7 +2446,7 @@ a.icon_google:hover {
 }
 .icon_mail {
     font-size: 13px;
-    line-height: 24px;
+    line-height:24px;
     background: url('../img/icon_footer_mail.png') left 5px no-repeat;
     padding: 0 0 0 30px;
     margin-bottom: 6px;
@@ -2494,11 +2495,10 @@ a.icon_google:hover {
 #footer a:hover {
     color: #3B8230;
 }
-
 .footer_pic img{
     float:left;
     border: 2px solid #b4edb4;
-    margin: 5px 9px 5px 0;
+    margin: 2px 9px 5px 5px;
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s linear;
     -ms-transition: all 0.3s linear;
@@ -2527,7 +2527,7 @@ a.icon_google:hover {
 .footer_news_item p{
     font-size: 12px;
     line-height: 15px;
-    margin-bottom: 12px;	
+    margin-bottom: 18px;	
 }
 .footer_news_item h4 {
     font-size: 12px;
@@ -2537,6 +2537,21 @@ a.icon_google:hover {
 }
 .footer_news_item h4:hover {	
     color: #3B8230;
+}
+.footer_news_item h5 {
+    font-size: 13px;
+    line-height: 17px;	
+    color:  #333;
+    margin-left: 5px;
+    font-weight: bold;
+}
+.footer_news_item h6 {
+    font-size: 13px;
+    line-height: 17px;	
+    color:  #333;
+    margin-left: 5px;
+    margin-top: -15px;
+    font-weight: bold;
 }
 .footer_news_item h3 {
     font-size: 18px;
@@ -2629,7 +2644,7 @@ body { }
     .header_left img { margin: 40px 0 0 0px; max-width: 100%; height: auto;}
     .header_right 		{ text-align: center;}
     #menu 			{ display: none;  background: #434343; width: 100%;}
-    #select_menu		{ display: block; max-width: 100%; padding: 5px; margin-bottom: 0; background:#00AF50; top: 150px;}
+    #select_menu		{ display: block; max-width: 100%; height: 25px; padding: 3px; margin-bottom: 0; background:#00AF50; top: 150px;}
     .header_contacts 	{ text-align: center; margin: 20px 0 30px; height: auto; }
     .header_phone		{ float: none; display: inline; margin: 4px 14px 5px 0; }
     .header_mail 		{ float: none; display: inline; margin-top: 14px;}
@@ -2700,7 +2715,7 @@ body { }
 .container .column,.container .columns      { float: left; display: inline;}
 .row                                        { margin-bottom: 10px;  width: 100%}
 .columnss {  width: 380px; float: left; }
-.colun {  width:400px;  margin-left:25px; padding-bottom:20px; margin-top:0px; float:left; background: url('../img/linha.png') ; }
+.colun {  width:400px;  margin-left:15px; padding-bottom:20px; margin-top:0px; float:left; background: url('../img/linha.png') ; }
 .columnasss {  width: 430px; float: left; left: -10px;}
 .columnass {  width: 945px; height: 300px; float: left; left: -25px; }
 .columnas {  width: 430px; float:right; }
@@ -2775,7 +2790,7 @@ body { }
     .column.alpha, .columns.alpha               { margin-left: 0; margin-right: 10px; }
     .column.omega, .columns.omega               { margin-right: 0; margin-left: 10px; }
     .alpha.omega                                { margin-left: 0; margin-right: 0; }
-    #select_menu{background:#00AF50; }
+    #select_menu{background:#00AF50;}
     .container .one.column,.container .onee.column
     .container .one.columns                     { width: 28px; }
     .container .two.columns                     { width: 76px; }
@@ -2821,11 +2836,16 @@ body { }
 /* Note: Design for a width of 320px */
 
 @media only screen and (max-width: 767px) {
-    .container { width: 300px;  margin-top: -50px;}
+    .container { width: 300px;  margin-top: -40px;}
     .container .columns,
     .container .column { margin: 0; }
     .dark_menu{ background: transparent;}
-    #select_menu{background:#00AF50; }
+    .logo {  margin-top: 8px;}
+    table{width: 300px;}
+    #slider, #slider_holder {width: 300px; height: 685px; margin-top: -400px;}
+    #select_menu{background:#00AF50; margin-top: 55px;}
+    .container .title.sixteen.columns{ width: 300px;  margin-top: 60px;}
+    .footer_inside{ margin-top: 20px;}
     .container .one.column,
     .container .one.columns,
     .container .two.columns,
@@ -2844,9 +2864,16 @@ body { }
     .container .fifteen.columns,
     .container .sixteen.columns,
     .container .sixteenn.columns,
-    .container .one-third.column,.colun,.container .onee-thirdd.column
+    .container .one-third.column,.column, .columns .onee-thirdd.column
     .container .two-thirds.column  { width: 300px; }
-
+    .container .column.two-thirds { width: 300px; }
+    .colun.one-third { width: 250px; }
+    .sixteen.columns{ width: 200px; }
+     .aqua_table th {padding: 2px 4px; font-size: 12px; font-weight: bold;}
+     .aqua_table td { padding: 2px 4px; font-size: 10px;}
+     .aqua_table td.b{font-weight: bold; font-size: 10px;}
+     .aqua_table{ width: 200px; }
+	
     /* Offsets */
     .container .offset-by-one,
     .container .offset-by-two,
@@ -2876,10 +2903,10 @@ body { }
     .logotipo{top: 50px;}
     .dark_menu{ background: transparent;}
     .dark_menu, #select_menu{top: 120px;}
-    #select_menu{background:#00AF50; }
+   #select_menu{background:#00AF50; margin-top: 20px;}
     .container .columns,
     .container .column, .colun { margin: 0; }
-
+    
     .container .one.column,.container .onee.column
     .container .one.columns,
     .container .two.columns,
@@ -2899,7 +2926,7 @@ body { }
     .container .sixteenn.columns
     .container .sixteen.columns,.colunaa,.colluna
     .container .one-third.column,.colun, .container .onee-thirdd.column
-    .container .two-thirds.column { width: 420px; }
+    .container .two-thirds.column { width: 430px; }
 }
 
 
